change to new home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <iframe src="https://appsmith.cluster.shiftingleft.io/app/invisirisk/home-63286b75d8673943cf52f07a"frameborder="0" scrolling="yes" seamless="seamless" style="display:block; width:100%; height:100vh;"></iframe>
+    <iframe src="https://appsmith.cluster.shiftingleft.io/app/invisirisk/package-63278b34087dc952e77ee8dc?branch=master"frameborder="0" scrolling="yes" seamless="seamless" style="display:block; width:100%; height:100vh;"></iframe>
 </body>
 </html>
 
